@@ -45,6 +45,8 @@ class Net::SSLeay {
   
   native method get_servername : string ($type : int);
   
+  native method set_tlsext_status_type : long  ($type : int);
+  
   native method DESTROY : void ();
   
 }
